# Sber-TypeScript

./: .env  .env.example  .python-version  README  README.md  build_request.py  call_api.py  check_env.py  generated_converter.ts  network_test.py  pyproject.toml  request.json  requirements.txt  run_mvp_check.py  run_ts_validation.py  smoke_test.py  smoke_test_sync.py  test_generated.ts
src/agent/: __init__.py  document_mapping_message.py  main.py  mapping_message.py  message.py  state.py
src/api/chat/: routers.py
src/api/v1/: routers.py  schemas.py
src/config/: __init__.py
src/config/app/: config.py
src/services/: deterministic_ts_builder.py  document_ts_template.py  file_preview.py  json_schema.py  llm_postprocess.py  project_logger.py  source_record_builder.py  tabular_mapping.py  tabular_ts_template.py  target_schema_utils.py  ts_validator.py
